...
        Column(modifier = Modifier.padding(pad)) {
            RichTextEditor(
                richTextState ,
                modifier = Modifier
                    .fillMaxWidth()
                    .weight(999f)
                    .testTag("editor")
                          )
            Spacer(modifier = Modifier.weight(1f))
        }
    }

}
...
